feat: 2023-02-03 0246 redis Failed and Remove

--- a/project/src/components/Home.css
+++ b/project/src/components/Home.css
@@ -12,3 +12,13 @@
   top: -3px;
   left: -3px;
 }
+
+.profileImgText {
+  font-size: 0.75rem;
+  color: rgb(176, 176, 176);
+  max-width: 68px;
+  display: inline-block;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
