feat: 2023-02-03 1547 Home CSS 1st Complete

--- a/project/src/components/Home.css
+++ b/project/src/components/Home.css
@@ -1,4 +1,4 @@
-.profileImgCircle {
+/* .profileImgCircle {
   width: 70px;
   height: 70px;
   position: absolute;
@@ -22,3 +22,11 @@
   white-space: nowrap;
   text-overflow: ellipsis;
 }
+
+.commentTextarea {
+  border: none;
+  border-bottom: 1px solid black;
+  width: 440px;
+  outline: none;
+  resize: none;
+} */
